fix x overflow

--- a/client/src/components/Contacts/Contacts.css
+++ b/client/src/components/Contacts/Contacts.css
@@ -13,6 +13,7 @@
 .home {
   margin-left: 60px;
   margin-top: 80px;
+  overflow-x: hidden;
 }
 
 .searchbarr {
